--- a/src/pages/headteacher/students/students.html
+++ b/src/pages/headteacher/students/students.html
@@ -32,7 +32,7 @@
 
                   <a ion-button (click)="presentModal(stud,'update')" small item-right>Edit</a>
 
-                  <button ion-button small item-right color="danger" [disabled]="dload && stdid==stud.id" (click)="deleteConfirm(stud)">Delete</button>
+                  <button ion-button small item-right color="danger" [disabled]="dload && stdid==stud.id" (click)="reasonConfirm(stud)">Delete</button>
                   
               
           </ion-item>
