--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,8 @@
 <ion-header>
       <ion-navbar color="primary">
-            <ion-title>Mark Attendance <small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
+            <div *ngIf="classes">
+            <ion-title>Mark Attendance <small *ngIf="classes.length >0">( {{classes[index].class_name}})</small> </ion-title>
+            </div>
 
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
@@ -25,7 +27,8 @@
                            <ion-datetime  style="color:#d03e84 " [min]="mindate" [max]="maxdate" displayFormat="  DD MMMM YYYY" (ionChange)="datechange(event)" pickerFormat="DD MMM  YYYY" [(ngModel)]="event"></ion-datetime>
                             <ion-note *ngIf="attendancetaken" color="green" item-right><ion-icon name="checkmark-circle"></ion-icon></ion-note>
             </button>
-            <ion-item *ngFor="let stud of classes[index].students|orderBy:'gender':true;let i=index">
+            <div *ngIf="classes.length>0">
+            <ion-item   *ngFor="let stud of classes[index].students|orderBy:'gender':true;let i=index">
                   <ion-label>
                         <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
                         <div class="spacer" style="height: 4px;"></div>
@@ -36,6 +39,7 @@
 
                   <ion-checkbox (ngModelChange)="onchange($event,stud.student_name)" item-right [(ngModel)]="stud.status"></ion-checkbox>
             </ion-item>
+            </div>
 
             <!--<ion-item>
              <ion-label>Daenerys Targaryen
@@ -104,8 +108,9 @@
 
 
       </ion-list>
-
-      <button *ngIf="!attendancetaken" [disabled]="load" ion-button block (click)="confirmattendance()">{{  load==false ? 'Submit' : 'Submitting ...' }}</button>
+      <diV *ngIf="classes">
+      <button *ngIf="!attendancetaken " [disabled]="load || classes.length<=0" ion-button block (click)="confirmattendance()">{{  load==false ? 'Submit' : 'Submitting ...' }}</button>
+      </diV>
        <button *ngIf="attendancetaken" [disabled]="load" ion-button block (click)="confirmattendance()">{{  load==false ? 'Update Attendance' : 'Updating ...' }}</button>
       <div class="spacer" style="height: 20px;"></div>
 
