implemented the delete system

--- a/src/pages/headteacher/students/addstudent.html
+++ b/src/pages/headteacher/students/addstudent.html
@@ -39,7 +39,7 @@
     <div class="spacer" style="height:10px;"></div>
     <ion-item>
       <ion-label stacked>Student ID</ion-label>
-      <ion-input formControlName="student_id"></ion-input>
+      <ion-input type="number" formControlName="student_id"></ion-input>
     </ion-item>
 
   <div class="spacer" style="height:15px;"></div>
