--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -51,8 +51,8 @@
     <ion-badge color="white" style="margin-left: 65%">14</ion-badge>
     </ion-card-header>
 
-    <button   ion-item>
-      <ion-icon name="contact" item-left></ion-icon>
+    <button (click)="teachers()"   ion-item>
+      <ion-icon name="contact"  item-left></ion-icon>
       Add/Edit Teachers
     </button>
 
@@ -70,7 +70,7 @@
     <ion-badge color="white" style="margin-left: 65%">10</ion-badge>
     </ion-card-header>
 
-    <button   ion-item>
+    <button  (click)="goclasses()"  ion-item>
       <ion-icon name="easel" item-left></ion-icon>
       Add/Edit Classes
     </button>
