--- a/src/pages/headteacher/teachers/teachers.html
+++ b/src/pages/headteacher/teachers/teachers.html
@@ -25,9 +25,9 @@
 
                   </ion-label>
 
-                  <a ion-button (click)="presentModal(stud,'update')" small item-right>Edit</a>
+                  <a ion-button (click)="presentModal(teach,'update')" small item-right>Edit</a>
 
-                  <a ion-button small item-right color="danger">Delete</a>
+                  <a ion-button small item-right color="danger" (click)="deleteConfirm(teach)" >Remove</a>
                   
               
           </ion-item>
