--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -27,10 +27,10 @@
       <ion-icon name="notifications" item-left style="color: #3f51b5"></ion-icon>
     </ion-item>
 
-    <ion-item>
+    <!--<ion-item>
       Claim Reward
       <ion-icon name="pricetag" item-left style="color: #3f51b5"></ion-icon>
-    </ion-item>
+    </ion-item>-->
     <ion-item-divider color="primary">Application</ion-item-divider>
 
     <div class="spacer" style="height:10px;"></div>
