--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -29,7 +29,7 @@
   <ion-card color="primary">
     <ion-card-header>
       Students
-    <ion-badge color="white" style="margin-left: 65%">260</ion-badge>
+    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.students}}</ion-badge>
     </ion-card-header>
 
     <ion-list>
@@ -48,7 +48,7 @@
   <ion-card color="primary">
     <ion-card-header>
       Teachers
-    <ion-badge color="white" style="margin-left: 65%">14</ion-badge>
+    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.teachers}}</ion-badge>
     </ion-card-header>
 
     <button (click)="teachers()"   ion-item>
@@ -67,7 +67,7 @@
   <ion-card color="primary">
     <ion-card-header>
       Classes
-    <ion-badge color="white" style="margin-left: 65%">10</ion-badge>
+    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.classes}}</ion-badge>
     </ion-card-header>
 
     <button  (click)="goclasses()"  ion-item>
