--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Attendance" tabIcon="checkbox-outline"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Students" tabIcon="list-box"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="My Students" tabIcon="list-box"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  
 </ion-tabs>
