--- a/src/pages/headteacher/individual/individual.html
+++ b/src/pages/headteacher/individual/individual.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Reuben Kibegwa</ion-title>
+    <ion-title *ngIf="student">{{student.student_name}}</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -25,7 +25,7 @@
      
     <ion-item style="background-color: #3f51b5">
       <ion-icon style="color: white" name="done-all" item-left item-start large></ion-icon>
-      <h4 style="color: white; font-size: 20px"><b>70%</b></h4>
+      <h4 style="color: white; font-size: 20px"><b>{{presentpercentage}}%</b></h4>
       <p style="color: white">Attendance Record</p>
     </ion-item>
 
@@ -33,7 +33,7 @@
       
     <ion-item style="background-color: #d03e84">
       <ion-icon style="color: white" name="alert" item-left item-start large></ion-icon>
-      <h4 style="color: white; font-size: 20px"><b>30%</b></h4>
+      <h4 style="color: white; font-size: 20px"><b>{{100-presentpercentage}}%</b></h4>
       <p style="color: white">Dropout Probability Rate</p>
     </ion-item>
 
