--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -45,10 +45,10 @@
     </button>
 
 
-    <ion-item>
+    <button (click) = "help()" ion-item>
       About and Help
       <ion-icon name="help-circle" item-left style="color: #3f51b5"></ion-icon>
-    </ion-item>
+    </button>
 
 
 
