--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>User Profile</ion-title>
+    <ion-title><span *ngIf="user">{{user.name}}</span></ion-title>
   </ion-navbar>
 </ion-header>
 
