--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -30,7 +30,7 @@
   <ion-card color="primary">
     <ion-card-header>
       Students
-    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.students}}</ion-badge>
+      <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.students}}</ion-badge>
     </ion-card-header>
 
     <ion-list>
@@ -49,37 +49,37 @@
   <ion-card *ngIf="is_headteacher" color="primary">
     <ion-card-header>
       Teachers
-    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.teachers}}</ion-badge>
+      <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.teachers}}</ion-badge>
     </ion-card-header>
 
-    <button (click)="teachers()"   ion-item>
+    <button (click)="teachers()" ion-item>
       <ion-icon name="contact"  item-left></ion-icon>
       Add/Edit Teachers
-    </button>
+    </button >
 
-      <button   ion-item>
+      <!--<button  ion-item>
       <ion-icon name="list-box" item-left></ion-icon>
       View Teacher Details
-    </button>
-    
+    </button>-->
+
     <ion-list>
     </ion-list>
   </ion-card>
   <ion-card *ngIf="is_headteacher" color="primary">
     <ion-card-header>
       Classes
-    <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.classes}}</ion-badge>
+      <ion-badge *ngIf="schoolinfo" color="white" style="margin-left: 65%">{{schoolinfo.classes}}</ion-badge>
     </ion-card-header>
 
-    <button  (click)="goclasses()"  ion-item>
+    <button (click)="goclasses()" ion-item>
       <ion-icon name="easel" item-left></ion-icon>
       Add/Edit Classes
     </button>
 
-     <button   ion-item>
+    <!--<button ion-item>
       <ion-icon name="list-box" item-left></ion-icon>
       View Class Details
-    </button>
+    </button>-->
     <ion-list>
     </ion-list>
   </ion-card>
