--- a/src/pages/headteacher/reports/reports.html
+++ b/src/pages/headteacher/reports/reports.html
@@ -10,11 +10,11 @@
   </ion-navbar>
 </ion-header>
 <ion-content>
-  <button ion-button clear>
+  <button ion-button clear (click)="showCalendar()">
                   <ion-icon name='calendar' style="color: #d03e84"></ion-icon>
 
                          <!--<p style="color:#d03e84 ">&nbsp; &nbsp; 30th January 2017</p>-->
-                           <ion-datetime  style="color:#d03e84 " displayFormat="  DD MMMM YYYY" (ionChange)="datechange(event)" pickerFormat="DD MMM  YYYY" [(ngModel)]="event"></ion-datetime>
+                           <!--<ion-datetime  style="color:#d03e84 " displayFormat="  DD MMMM YYYY" (ionChange)="datechange(event)" pickerFormat="DD MMM  YYYY" [(ngModel)]="event"></ion-datetime>-->
 
   </button>
 
