--- a/src/pages/headteacher/classes/addclass.html
+++ b/src/pages/headteacher/classes/addclass.html
@@ -48,7 +48,8 @@
       <ion-label floating>Class</ion-label>
       <ion-input formControlName="class_id"></ion-input>
     </ion-item>-->
-    <button ion-button full type="submit" [disabled]="!classform.valid"> <span *ngIf="type">{{type}}</span></button>
+     <button ion-button full type="submit" [disabled]="!classform.valid || load"> <span *ngIf="type">{{load?'Loading ...':type}}</span></button>
+    <!--<button ion-button full type="submit" [disabled]="!classform.valid"> <span *ngIf="type">{{type}}</span></button>-->
   </form>
   <!--<button ion-button (click)="dismiss()">Close</button>-->
 
