changed the individual page date

--- a/src/pages/headteacher/teachers/addteacher.html
+++ b/src/pages/headteacher/teachers/addteacher.html
@@ -33,7 +33,7 @@
       <ion-label>Teacher Type</ion-label>
       <ion-select formControlName="teacher_type">
         <ion-option value="TSC" selected="true">Tsc</ion-option>
-        <ion-option value="BOM">Board of Management</ion-option>
+        <ion-option value="BRD">Board of Management</ion-option>
       </ion-select>
     </ion-item>
      <div class="spacer" style="height:5px;"></div>
