--- a/src/pages/headteacher/individual/individual.html
+++ b/src/pages/headteacher/individual/individual.html
@@ -21,7 +21,7 @@
       
       </button>-->
     <!--<p >&nbsp; &nbsp; January 2017</p>-->
-    <ion-select [(ngModel)]="month" (ngModelChange)="onmonthyearchange(month,year)" style="color:#d03e84 ">
+    <ion-select [(ngModel)]="month" (ngModelChange)="onmonthyearchange(month,year)" style="color:#d03e84 " pull-right>
       <ion-option value="1" selected="true">January</ion-option>
       <ion-option value="2">February</ion-option>
       <ion-option value="3">March</ion-option>
