--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -1,4 +1,4 @@
-<!--<ion-header>
+<ion-header>
   <ion-navbar color="primary">
     <ion-title>About & Help</ion-title>
   </ion-navbar>
@@ -6,19 +6,16 @@
 
 <ion-content class="tutorial-page">
 
-  <ion-card>
-    <ion-card-header>
-     <b>How Can We Help You?</b>
-    </ion-card-header>
+  <div class="spacer" style="height:150px;"></div>
 
-    <ion-card-content>
-        <ion-item>
-          <ion-label>Todo</ion-label>
-          <ion-textarea>ihhhj</ion-textarea>
-        </ion-item>
-    
-    </ion-card-content>
-  </ion-card>
+    <ion-list>
+      <ion-item style="text-align: center">
+        Need more help?<br><br>
+        Download User Manual 
+   <div class="spacer" style="height:20px;"></div>
 
+        <a href = "https://attendance.co.ke/manual.pdf"><button ion-button medium style="height: 40px; width: 150px;">User Manual</button></a>
+      </ion-item>
+  </ion-list>
 
-</ion-content>-->
+</ion-content>
