added the school code to getting absent and all students

--- a/src/pages/headteacher/classes/classes.html
+++ b/src/pages/headteacher/classes/classes.html
@@ -1,12 +1,12 @@
 <ion-header>
       <ion-navbar color="primary">
-            <ion-title>Classes <small *ngIf="classes">( {{classes.length}})</small> </ion-title>
-
+            <ion-title>Classes </ion-title>
+<!--
             <ion-buttons end>
                   <button ion-button >
                   <ion-icon name="more"></ion-icon>
                   </button>
-            </ion-buttons>
+            </ion-buttons>-->
       </ion-navbar>
 </ion-header>
 
