--- a/src/pages/headteacher/teachers/teachers.html
+++ b/src/pages/headteacher/teachers/teachers.html
@@ -2,11 +2,11 @@
       <ion-navbar color="primary">
             <ion-title>Teachers <small *ngIf="teachers">( {{teachers.length}})</small> </ion-title>
 
-            <ion-buttons end>
+            <!--<ion-buttons end>
                   <button ion-button >
                   <ion-icon name="more"></ion-icon>
                   </button>
-            </ion-buttons>
+            </ion-buttons>-->
       </ion-navbar>
 </ion-header>
 
