Added the class selection for non-admin teachers

--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title *ngIf="is_headteacher"><span *ngIf="profile">{{profile.school_name}}  </span> </ion-title>
-    <ion-title *ngIf="!is_headteacher">My Students</ion-title>
+    <ion-title *ngIf="!is_headteacher && profile">  {{profile.school_name}} </ion-title>
   </ion-navbar>
 </ion-header>
 
