--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -29,7 +29,7 @@
       <ion-item>
         <ion-label (click)="individual(stud)">
           <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
-          <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{stud.emis_code}}</p>
+          <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{stud.student_id}}</p>
         </ion-label>
 
         <ion-icon (click)="callConfirm(stud)" item-right name="call"></ion-icon>
